--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ data/processed/model1_refit.fst
 data/processed/model2_refit.fst
 data/processed/model3_refit.fst
 
+# Graphing temp
+Rplot.*
+
 # Excel tmp
 ~$*.*
 
