--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*.DS_store
+.DS_Store
 
 # Model temp files
 *.rds
@@ -53,3 +53,12 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# Latex
+*.aux
+*.blg
+*.log
+*.fls
+*.fdb_latexmk
+*.gz
+*.log
